Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46393

tst_extras fails on rhel, win7, ubuntu and osx

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6
    • 5.5.1, 5.6
    • Quick: Controls 1
    • linux-g++_developer-build_qtnamespace_qtlibinfix_RHEL_6.6_x64
      win32-mingw48_developer-build_qtlibinfix_opengl_Windows_7
      macx-clang_developer-build_OSX_10.10
    • macOS

      rhel:

       Testing extras
       ./tst_extras: symbol lookup error: /work/build/qtbase/qml/QtQuick/Extras/libqtquickextrasplugin.so: undefined symbol: _ZN13TestNamespace35qInitResources_extras_TestNamespaceEv
       QtQA::App::TestRunner: test failed,
      

      win7

      3:14:57 QtQA::App::TestRunner: begin tst_extras: [release\tst_extras.exe] [-silent] [-o] [C:\work\ci\qt\qt5\dev\_artifacts\test-logs\tst_extras.exe-testresults-00.xml,xml] [-o] [-,txt]
      23:15:23 QtQA::App::TestRunner: Process exited with exit code 0xC0000005 (STATUS_ACCESS_VIOLATION)
      23:15:23 QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      23:15:42 QtQA::App::TestRunner: Process exited with exit code 0xC0000005 (STATUS_ACCESS_VIOLATION)
      23:15:42 QtQA::App::TestRunner: test failure could be reproduced twice consecutively
      23:15:42 QtQA::App::TestRunner: end tst_extras: 44 seconds, exit code 3221225477
      23:15:42 QtQA::App::TestScheduler: tst_extras failed
      

      osx log:
      http://testresults.qt.io/ci/Qt5_5.5_Integration/build_00109/macx-clang_developer-build_OSX_10.10/log.txt.gz

      Relevant failures:

      QtQA::App::TestRunner: begin tst_extras: [./tst_extras] [-silent] [-o] [/work/ci/qt/qt5/5.5/_artifacts/test-logs/tst_extras-testresults-00.xml,xml] [-o] [-,txt]
      Testing extras
      FAIL!  : extras::Tests_Tumbler::test_focusPastLastColumn() 'verify()' returned FALSE. ()
         Loc: [/work/build/qtquickcontrols/tests/auto/extras/data/tst_tumbler.qml(358)]
      FAIL!  : extras::Tests_Tumbler::test_itemsCorrectlyPositioned() 'verify()' returned FALSE. ()
         Loc: [/work/build/qtquickcontrols/tests/auto/extras/data/tst_tumbler.qml(267)]
      FAIL!  : extras::Tests_Tumbler::test_keyboardNavigation() 'verify()' returned FALSE. ()
         Loc: [/work/build/qtquickcontrols/tests/auto/extras/data/tst_tumbler.qml(192)]
      Totals: 153 passed, 3 failed, 0 skipped, 0 blacklisted
      QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      ********* Start testing of extras *********
      Config: Using QtTest library 5.5.0, Qt 5.5.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 6.0 (clang-600.0.54) (Apple))
      PASS   : extras::Tests_CircularGauge::initTestCase()
      PASS   : extras::Tests_CircularGauge::test_instance()
      PASS   : extras::Tests_CircularGauge::test_tickmarksVisible()
      PASS   : extras::Tests_CircularGauge::cleanupTestCase()
      PASS   : extras::Tests_CircularTickmarkLabel::initTestCase()
      PASS   : extras::Tests_CircularTickmarkLabel::test_angleRange()
      PASS   : extras::Tests_CircularTickmarkLabel::test_invalidValues()
      PASS   : extras::Tests_CircularTickmarkLabel::test_tickmarksAndLabels()
      PASS   : extras::Tests_CircularTickmarkLabel::cleanupTestCase()
      PASS   : extras::Tests_Common::initTestCase()
      PASS   : extras::Tests_Common::test_resize(CircularGauge)
      PASS   : extras::Tests_Common::test_resize(DelayButton)
      PASS   : extras::Tests_Common::test_resize(Dial)
      PASS   : extras::Tests_Common::test_resize(Gauge)
      PASS   : extras::Tests_Common::test_resize(PieMenu)
      PASS   : extras::Tests_Common::test_resize(StatusIndicator)
      PASS   : extras::Tests_Common::test_resize(ToggleButton)
      PASS   : extras::Tests_Common::test_resize(Tumbler)
      PASS   : extras::Tests_Common::cleanupTestCase()
      PASS   : extras::Tests_DelayButton::initTestCase()
      PASS   : extras::Tests_DelayButton::test_activation(delayed)
      PASS   : extras::Tests_DelayButton::test_activation(immediate)
      PASS   : extras::Tests_DelayButton::test_activation(negative)
      PASS   : extras::Tests_DelayButton::test_checked(delayed)
      PASS   : extras::Tests_DelayButton::test_checked(immediate)
      PASS   : extras::Tests_DelayButton::test_checked(negative)
      PASS   : extras::Tests_DelayButton::test_instance()
      PASS   : extras::Tests_DelayButton::test_largeText()
      PASS   : extras::Tests_DelayButton::test_programmaticCheck()
      PASS   : extras::Tests_DelayButton::test_progress()
      PASS   : extras::Tests_DelayButton::cleanupTestCase()
      PASS   : extras::Tests_Dial::initTestCase()
      PASS   : extras::Tests_Dial::test_activeFocusOnPress()
      PASS   : extras::Tests_Dial::test_dragToSet()
      PASS   : extras::Tests_Dial::test_dragging(default)
      PASS   : extras::Tests_Dial::test_dragging(scaled2)
      PASS   : extras::Tests_Dial::test_dragging(scaled1)
      PASS   : extras::Tests_Dial::test_hovered()
      PASS   : extras::Tests_Dial::test_instance()
      PASS   : extras::Tests_Dial::test_keyboardNavigation()
      PASS   : extras::Tests_Dial::test_maximumValue()
      PASS   : extras::Tests_Dial::test_minimumValue()
      PASS   : extras::Tests_Dial::test_outerRadius()
      PASS   : extras::Tests_Dial::test_pressed()
      PASS   : extras::Tests_Dial::test_tickmarksVisible()
      PASS   : extras::Tests_Dial::cleanupTestCase()
      PASS   : extras::Tests_Gauge::initTestCase()
      PASS   : extras::Tests_Gauge::test_assignStyle()
      PASS   : extras::Tests_Gauge::test_formatValue()
      PASS   : extras::Tests_Gauge::test_gaugeTickmarkValues(tickmarkStepSize=1 minorTickmarkCount=4 minimumValue=0 maximumValue=5)
      PASS   : extras::Tests_Gauge::test_gaugeTickmarkValues(tickmarkStepSize=1 minorTickmarkCount=1 minimumValue=0 maximumValue=5)
      PASS   : extras::Tests_Gauge::test_gaugeTickmarkValues(tickmarkStepSize=1 minorTickmarkCount=1 minimumValue=-1 maximumValue=1)
      PASS   : extras::Tests_Gauge::test_gaugeTickmarkValues(tickmarkStepSize=1 minorTickmarkCount=1 minimumValue=-2 maximumValue=-1)
      PASS   : extras::Tests_Gauge::test_gaugeTickmarkValues(tickmarkStepSize=0.5 minorTickmarkCount=1 minimumValue=1 maximumValue=2)
      PASS   : extras::Tests_Gauge::test_gaugeTickmarkValues(tickmarkStepSize=0.5 minorTickmarkCount=1 minimumValue=-0.5 maximumValue=0.5)
      PASS   : extras::Tests_Gauge::test_valueBarPosition(AlignLeft)
      PASS   : extras::Tests_Gauge::test_valueBarPosition(AlignRight)
      PASS   : extras::Tests_Gauge::test_valuePosition()
      PASS   : extras::Tests_Gauge::cleanupTestCase()
      PASS   : extras::Tests_Picture::initTestCase()
      PASS   : extras::Tests_Picture::test_color(undefined)
      PASS   : extras::Tests_Picture::test_color(not a valid color)
      PASS   : extras::Tests_Picture::test_color(red)
      PASS   : extras::Tests_Picture::test_color(black)
      PASS   : extras::Tests_Picture::test_instance()
      PASS   : extras::Tests_Picture::test_size()
      PASS   : extras::Tests_Picture::test_source(picture.dat)
      PASS   : extras::Tests_Picture::cleanupTestCase()
      PASS   : extras::Tests_PieMenu::initTestCase()
      PASS   : extras::Tests_PieMenu::test_QTRD3027()
      PASS   : extras::Tests_PieMenu::test_addItem()
      PASS   : extras::Tests_PieMenu::test_boundingItem()
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapCenter)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearLeft)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearRight)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearTop)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearBottom)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearTopLeft)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearTopRight)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearBottomRight)
      PASS   : extras::Tests_PieMenu::test_bounds(noSnapNearBottomLeft)
      PASS   : extras::Tests_PieMenu::test_bounds(leftEdge)
      PASS   : extras::Tests_PieMenu::test_bounds(rightEdge)
      PASS   : extras::Tests_PieMenu::test_bounds(topEdge)
      PASS   : extras::Tests_PieMenu::test_bounds(bottomEdge)
      PASS   : extras::Tests_PieMenu::test_bounds(topLeftCorner)
      PASS   : extras::Tests_PieMenu::test_bounds(topRightCorner)
      PASS   : extras::Tests_PieMenu::test_bounds(bottomRightCorner)
      PASS   : extras::Tests_PieMenu::test_bounds(bottomLeftCorner)
      PASS   : extras::Tests_PieMenu::test_hideItem(hideFirst)
      PASS   : extras::Tests_PieMenu::test_hideItem(hideSecond)
      PASS   : extras::Tests_PieMenu::test_hideItem(hideThird)
      PASS   : extras::Tests_PieMenu::test_insertItem()
      PASS   : extras::Tests_PieMenu::test_instance()
      PASS   : extras::Tests_PieMenu::test_keepMenuOpenWhenTriggered()
      PASS   : extras::Tests_PieMenu::test_longPressTriggerOnClick()
      PASS   : extras::Tests_PieMenu::test_pressedIndex()
      PASS   : extras::Tests_PieMenu::test_removeItem()
      PASS   : extras::Tests_PieMenu::test_rotatedBoundingItem()
      PASS   : extras::Tests_PieMenu::test_sectionAngles(startAngle=-90, endAngle=90, section=0)
      PASS   : extras::Tests_PieMenu::test_sectionAngles(startAngle=270, endAngle=90, section=0)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=-90, endAngle=90, top left)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=-90, endAngle=90, bottom right)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=-90, endAngle=-270, bottom left edge)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=-90, endAngle=-270, bottom right edge)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=0, endAngle=190, bottom left edge)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=0, endAngle=-90, section 2)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=0, endAngle=-90, section 1)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=0, endAngle=-90, section 0)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=-190, endAngle=-90, bottom right edge)
      PASS   : extras::Tests_PieMenu::test_selectionAngle(startAngle=-90, endAngle=-190, bottom right edge)
      PASS   : extras::Tests_PieMenu::test_selectionItemOnMouseMove_QTRD3024()
      PASS   : extras::Tests_PieMenu::test_triggerMode()
      PASS   : extras::Tests_PieMenu::cleanupTestCase()
      PASS   : extras::Tests_StatusIndicator::initTestCase()
      PASS   : extras::Tests_StatusIndicator::test_active(active)
      PASS   : extras::Tests_StatusIndicator::test_active(inactive)
      PASS   : extras::Tests_StatusIndicator::test_baseStyleHasOuterShadow()
      PASS   : extras::Tests_StatusIndicator::test_color()
      PASS   : extras::Tests_StatusIndicator::test_instance()
      PASS   : extras::Tests_StatusIndicator::cleanupTestCase()
      PASS   : extras::Tests_ToggleButton::initTestCase()
      PASS   : extras::Tests_ToggleButton::test_instance()
      PASS   : extras::Tests_ToggleButton::test_largeText()
      PASS   : extras::Tests_ToggleButton::cleanupTestCase()
      PASS   : extras::Tests_Tumbler::initTestCase()
      PASS   : extras::Tests_Tumbler::test_currentIndex()
      PASS   : extras::Tests_Tumbler::test_datePicker()
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=0 expectedDisplacement=0)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate1 offset=0 expectedDisplacement=-1)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate5 offset=0 expectedDisplacement=1)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=0.25 expectedDisplacement=-0.25)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate1 offset=0.25 expectedDisplacement=-1.25)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate5 offset=0.25 expectedDisplacement=0.75)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=0.5 expectedDisplacement=-0.5)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate1 offset=0.5 expectedDisplacement=-1.5)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate5 offset=0.5 expectedDisplacement=0.5)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=0.75 expectedDisplacement=-0.75)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate5 offset=0.75 expectedDisplacement=0.25)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=4.75 expectedDisplacement=1.25)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate1 offset=4.75 expectedDisplacement=0.25)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=4.5 expectedDisplacement=1.5)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate1 offset=4.5 expectedDisplacement=0.5)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate0 offset=4.25 expectedDisplacement=1.75)
      PASS   : extras::Tests_Tumbler::test_displacement(delegate1 offset=4.25 expectedDisplacement=0.75)
      FAIL!  : extras::Tests_Tumbler::test_focusPastLastColumn() 'verify()' returned FALSE. ()
         Loc: [/work/build/qtquickcontrols/tests/auto/extras/data/tst_tumbler.qml(358)]
      PASS   : extras::Tests_Tumbler::test_instance()
      FAIL!  : extras::Tests_Tumbler::test_itemsCorrectlyPositioned() 'verify()' returned FALSE. ()
         Loc: [/work/build/qtquickcontrols/tests/auto/extras/data/tst_tumbler.qml(267)]
      FAIL!  : extras::Tests_Tumbler::test_keyboardNavigation() 'verify()' returned FALSE. ()
         Loc: [/work/build/qtquickcontrols/tests/auto/extras/data/tst_tumbler.qml(192)]
      PASS   : extras::Tests_Tumbler::test_resizeAfterFlicking()
      PASS   : extras::Tests_Tumbler::test_setCurrentIndexAt()
      PASS   : extras::Tests_Tumbler::test_visible()
      PASS   : extras::Tests_Tumbler::test_visibleItemCount(items=6, visibleItemCount=5)
      PASS   : extras::Tests_Tumbler::test_visibleItemCount(items=5, visibleItemCount=3)
      PASS   : extras::Tests_Tumbler::test_visibleItemCount(items=2, visibleItemCount=1)
      PASS   : extras::Tests_Tumbler::cleanupTestCase()
      Totals: 153 passed, 3 failed, 0 skipped, 0 blacklisted
      ********* Finished testing of extras *********
      

      Ubuntu:
      http://testresults.qt.io/ci/QtDeclarative_5.5_Integration/build_00298/revdep-qtquickcontrols_linux-g++_shadow-build_Ubuntu_14.04_x64/log.txt.gz

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            javahaka Jani Vähäkangas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: