Fix Qt Quick Extras plugin when built against Qt with namespaces

Q_INIT_RESOURCES declares an external symbols, and if therefore
Q_INIT_RESOURCES is within a namespace, it will also think that declared symbol
has to be in the namespace. However our rcc generated symbols are in the global
namespace, so that's also from where we need to call Q_INIT_RESOURCES.

Task-number: QTBUG-46393
Change-Id: Id3b5f4fbf561724811e3e9aec7d37def20903ea7
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>